[package]
name = "eris"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
ego-tree = "0.6.2"
html5ever = "0.26.0"
rayon = "1.7.0"
regex = "1.9.3"
scraper = "0.17.1"
thiserror = "1.0.47"
walkdir = "2.3.3"
zip = "0.6.6"

[profile.release]
lto = true
