[package]
name = "eris"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
ego-tree = "0.6.2"
html5ever = "0.26.0"
rayon = "1.7.0"
regex = "1.9.3"
reqwest = { version = "0.11.20", features = ["blocking", "multipart", "json"] }
scraper = "0.17.1"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.47"
walkdir = "2.3.3"
zip = "0.6.6"

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
